* 2007-07-23 - marcus.klein@open-xchange.com

 - Improved SQL command when listing deleted tasks.

* 2007-07-23 - martin.kauss@open-xchange.com
 
 - Fixed bug #8490. The wrong folder was send to the client if a shared folder
   was requested but the current user was also a participant in an appointment.
   This has been fixed.

* 2007-07-23 - marcus.klein@open-xchange.com

 - Added config tree setting fastgui.
 - Bugfix #8427: Removing files if storing them fails.

* 2007-07-20 - thorben.betten@open-xchange.com

 - Bugfix #8491: Allowing sharing of default folders (if owner still holds
   full rights on modified ACL list)
 - Fixed subfolder display on shared IMAP folders: A folder that was
   previously shared and subscribed but now does no more grant rights for
   affected user still occurs in user's subscription list (LSUB command).
   This is fixed now.
 - Added an own implementation of org.json.JSONWriter that uses real objects
   instead of a java.io.Writer

* 2007-07-19 - francisco.laguna@open-xchange.com

 - Fixed build.xml to also copy subdirectories of the configuration.

* 2007-07-19 - thorben.betten@open-xchange.com

 - Added mail folder clearing to mail servlet
 - Added invocation of FileItem.delete() on file upload to avoid double
   temporary files
 - Fastened reading of body content on PUT request in AJAXServlet.getBody()
 - Servlet mapping read from directory

* 2007-07-18 - thorben.betten@open-xchange.com

 - New design for custom IMAP commands
 - Moved imap-related packages to new package(s)
 - Bugfix #8472: Improved error message if a hidden subfolder is located
   underneath a folder that should be deleted
 - Bugfix #8498: Additional check when reading an infostore document's MIME
   type setting
 - Bugfix #8360: Removed senseless counter for working servlets in JMX's
   GeneralMonitor interface

* 2007-07-17 - francisco.laguna@open-xchange.com

 - Fix for bug #8478: Changed LogLevel.

* 2007-07-13 - tobias.prinz@open-xchange.com
